added APPS, accounts, and users side navigation

--- a/src/app/components/common/navigation/navigation.template.html
+++ b/src/app/components/common/navigation/navigation.template.html
@@ -71,16 +71,13 @@
 
   <!-- Only for demo purpose -->
   <mat-divider></mat-divider>
-  <div>
+  <!-- <div>
     <mat-list-item class="sidebar-list-item">
       <a (click)="addMenuItem()">
-        <span
-        class="menu-item-tooltip" 
-        matTooltip="Add new menu item" 
-        matTooltipPosition="right"></span>
+       
         <mat-icon>add</mat-icon>
         <span>{{'ADD'}}</span>
       </a>
     </mat-list-item>
-  </div>
+  </div> -->
 </mat-nav-list>
