--- a/src/app/components/common/layouts/admin-layout/admin-layout.template.html
+++ b/src/app/components/common/layouts/admin-layout/admin-layout.template.html
@@ -4,86 +4,24 @@
     <div id="scroll-area" class="navigation-hold" fxLayout="column">
       <!-- App Logo -->
       <div class="branding default-bg">
-          <img src="assets/images/logo.png" alt="" class="app-logo">
-          <!-- Two different logos for dark and light themes -->
-          <img 
-          src="assets/images/logo-text-white.png" 
-          alt="" 
-          class="app-logo-text"
-          *ngIf="themeService.activatedThemeName.indexOf('dark') !== -1">
-          <img 
-          src="assets/images/logo-text.png" 
-          alt="" 
-          class="app-logo-text"
-          *ngIf="themeService.activatedThemeName.indexOf('dark') === -1">
+        <!-- <img src="assets/images/logo.png" alt="" class="app-logo"> -->
+        <!-- Two different logos for dark and light themes -->
+        <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') !== -1" style="color: rgb(255, 255, 255)">CODELAB</h2>
+        <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') === -1">CODELAB</h2>
       </div>
 
-      <!-- Sidebar user -->
-      <div class="app-user">
-        <div class="app-user-photo">
-          <img src="assets/images/face-7.jpg" alt="">
-        </div>
-        <span class="app-user-name mb-05">
-          <mat-icon class="icon-xs text-muted">lock</mat-icon> 
-          Watson Joyce
-        </span>
-        <!-- Small buttons -->
-        <div class="app-user-controls">
-          <button 
-          class="text-muted"
-          mat-icon-button 
-          mat-xs-button
-          [matMenuTriggerFor]="appUserMenu">
-            <mat-icon>settings</mat-icon>
-          </button>
-          <button 
-          class="text-muted"
-          mat-icon-button 
-          mat-xs-button
-          matTooltip="Inbox"
-          routerLink="/inbox">
-            <mat-icon>email</mat-icon>
-          </button>
-          <button 
-          class="text-muted"
-          mat-icon-button 
-          mat-xs-button
-          matTooltip="Sign Out"
-          routerLink="/sessions/signin">
-            <mat-icon>exit_to_app</mat-icon>
-          </button>
-          <mat-menu #appUserMenu="matMenu">
-              <button mat-menu-item routerLink="/profile/overview">
-                <mat-icon>account_box</mat-icon>
-                <span>Profile</span>
-              </button>
-              <button mat-menu-item routerLink="/profile/settings">
-                <mat-icon>settings</mat-icon>
-                <span>Account Settings</span>
-              </button>
-              <button mat-menu-item routerLink="/calendar">
-                <mat-icon>date_range</mat-icon>
-                <span>Calendar</span>
-              </button>
-              <button mat-menu-item routerLink="/sessions/signin">
-                <mat-icon>exit_to_app</mat-icon>
-                <span>Sign out</span>
-              </button>
-            </mat-menu>
-        </div>
-      </div>
+     
       <!-- Navigation -->
       <navigation></navigation>
+      
     </div>
+   
   </mat-sidenav>
 
   <!-- Top Bar -->
   <!-- Template reference variables of Left sidebar and Right notification is supplied -->
   <!-- Listens language change event -->
-  <topbar 
-  [sidenav]="sidenav" 
-  [notificPanel]="notificationPanel"
-  ></topbar>
+  <topbar [sidenav]="sidenav" [notificPanel]="notificationPanel"></topbar>
   <app-breadcrumb #breadcrumb></app-breadcrumb>
 
   <!-- App content -->
