--- a/src/app/apps/components/apps-list/apps-list.component.html
+++ b/src/app/apps/components/apps-list/apps-list.component.html
@@ -1,27 +1,21 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+<!-- <table mat-table *ngIf="apps$ | async as apps; else loader" class="mat-elevation-z1">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
+  <div *ngFor=apps>
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{apps.content.code}} </td>
     </ng-container>
   
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
   
-    <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef> Weight </th>
       <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
     </ng-container>
   
-    <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef> Symbol </th>
       <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
@@ -32,3 +26,11 @@
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
+  <div >
+    {{apps | json}}
+
+  </div>
+
+  <ng-template #loader>loading...</ng-template>
+   -->
