--- a/src/app/apps/components/apps-list/apps-list.component.html
+++ b/src/app/apps/components/apps-list/apps-list.component.html
@@ -1,36 +1,39 @@
-<!-- <table mat-table *ngIf="apps$ | async as apps; else loader" class="mat-elevation-z1">
+<a href="/apps/new" style="margin-top: 30px; margin-right:20px" fxLayout="row" fxLayoutAlign="end start">
+New App
+</a>
 
-  <div *ngFor=apps>
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{apps.content.code}} </td>
+<table mat-table [dataSource]="dataSource" *ngIf="!isLoading; else loader"  class="mat-elevation-z1">
+
+  <div>
+    <ng-container matColumnDef="sno">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let row; let i = index"> {{i+1}} </td>
     </ng-container>
   
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef> App Name </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef> Code </th>
+      <td mat-cell *matCellDef="let row"> {{row.code}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="accountType">
+      <th mat-header-cell *matHeaderCellDef> Account Type </th>
+      <td mat-cell *matCellDef="let row"> {{row.accountType}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dateCreated">
+      <th mat-header-cell *matHeaderCellDef> Date Created </th>
+      <td mat-cell *matCellDef="let row"> {{row.dateCreated | date : 'dd MMMM, yyyy'}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
+  </div>
+
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</div>
-  <div >
-    {{apps | json}}
-
-  </div>
-
-  <ng-template #loader>loading...</ng-template>
-   -->
