--- a/src/app/components/common/topbar/topbar.template.html
+++ b/src/app/components/common/topbar/topbar.template.html
@@ -19,7 +19,7 @@
   <mat-icon>chevron_left</mat-icon>
   </button>
   <!-- Search form -->
-  <div 
+  <div  *ngIf="false"
   fxFlex
   fxHide.lt-sm="true" 
   class="search-bar">
@@ -30,7 +30,7 @@
   </div>
   <span fxFlex></span>
   <!-- Language Switcher -->
-  <mat-select 
+  <mat-select  *ngIf="false"
   placeholder=""
   id="langToggle"
   [style.width]="'auto'"
@@ -67,7 +67,7 @@
     </mat-grid-list>
   </mat-menu>
   <!-- Notification toggle button -->
-  <button 
+  <button *ngIf="false"
   mat-icon-button
   matTooltip="Notifications" 
   (click)="toggleNotific()"
@@ -77,8 +77,9 @@
     <span class="notification-number mat-bg-warn">3</span>
   </button>
   <!-- Top left user menu -->
+  <span class="fz-1">{{loggedInUser.fullName}} | {{loggedInUser.accountName}}</span>
   <button mat-icon-button [matMenuTriggerFor]="accountMenu" class="topbar-button-right img-button">
-    <img src="assets/images/face-7.jpg" alt="">
+    <img src="assets/images/user_avatar_2.svg" alt="">
   </button>
   <mat-menu #accountMenu="matMenu">
     <button mat-menu-item [routerLink]="['/profile/overview']">
@@ -93,7 +94,7 @@
       <mat-icon>notifications_off</mat-icon>
       <span>Disable alerts</span>
     </button>
-    <button mat-menu-item [routerLink]="['/sessions/signin']">
+    <button mat-menu-item (click)="onSignOutClick()">
       <mat-icon>exit_to_app</mat-icon>
       <span>Sign out</span>
     </button>
