--- a/src/app/views/others/app-blank/app-blank.component.html
+++ b/src/app/views/others/app-blank/app-blank.component.html
@@ -1,3 +1,13 @@
-<p class="m-333">
-  This is a blank component.
-</p>
+<div fxLayout="row wrap" fxLayoutGap="20px">
+  <mat-card>
+      <mat-card-content>
+          Total Accounts | 0
+      </mat-card-content>
+      <mat-card-actions>
+          <button mat-button (click)="onAction1">Acccounts</button>
+      </mat-card-actions>
+      <mat-card-footer>
+          since forever
+      </mat-card-footer>
+  </mat-card>
+</div>
