--- a/src/app/views/accounts/components/accounts-list/accounts-list.component.html
+++ b/src/app/views/accounts/components/accounts-list/accounts-list.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <span fxFlex="1 1 auto"></span>
-        <button mat-raised-button color="primary">
+        <button mat-raised-button color="primary" [routerLink]="['new']">
           <mat-icon class="mat-18">add</mat-icon>
           Add Account
         </button>
