--- a/src/app/views/accounts/components/account-form/account-form.component.css
+++ b/src/app/views/accounts/components/account-form/account-form.component.css
@@ -2,3 +2,12 @@
     font-weight: bolder;
     font-size: larger;
 }
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    height: 100%;
+  }
