--- a/src/app/views/accounts/components/accounts-list/accounts-list.component.html
+++ b/src/app/views/accounts/components/accounts-list/accounts-list.component.html
@@ -32,11 +32,11 @@
               <td mat-cell *matCellDef="let row">
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px" *ngIf="row.status === 'ACTIVE'">
                   <mat-icon [ngStyle]="{'color': 'green'}" class="mat-8">check_circle</mat-icon>
-                  <span>Online</span>
+                  <span>{{row.status | titlecase}}</span>
                 </div>
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px" *ngIf="row.status === 'INACTIVE'">
                   <mat-icon color="warning" class="mat-8">warning</mat-icon>
-                  <span>Offline</span>
+                  <span>{{row.status | titlecase}}</span>
                 </div>
               </td>
             </ng-container>
