added codelab images

--- a/src/app/components/common/layouts/admin-layout/admin-layout.template.html
+++ b/src/app/components/common/layouts/admin-layout/admin-layout.template.html
@@ -4,11 +4,11 @@
     <div id="scroll-area" class="navigation-hold" fxLayout="column">
       <!-- App Logo -->
       <div class="branding default-bg">
-        <!-- <img src="assets/images/logo.png" alt="" class="app-logo"> -->
+        <img src="assets/images/codelab-logo2.png" alt="" class="app-logo">
         <!-- Two different logos for dark and light themes -->
-        <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') !== -1"
+        <!-- <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') !== -1"
           style="color: rgb(255, 255, 255)">CODELAB</h2>
-        <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') === -1">CODELAB</h2>
+        <h2 class="app-logo-text" *ngIf="themeService.activatedThemeName.indexOf('dark') === -1">CODELAB</h2> -->
       </div>
 
 
