--- a/src/app/views/apps/components/app-configuration/app-configuration.component.html
+++ b/src/app/views/apps/components/app-configuration/app-configuration.component.html
@@ -4,7 +4,7 @@
             <div fxLayout="row wrap" class="plr-30" fxLayoutAlign="start center">
                 <div>
                     <h1>{{app.name | titlecase}}</h1>
-                    <p class="header-desc">...</p>
+                    <p class="header-desc">{{app.description | titlecase}}</p>
                 </div>
 
                 <span fxFlex="1 1 auto"></span>
@@ -25,7 +25,9 @@
                 <mat-tab label="App Info">
                     <app-app-info [app]="app"></app-app-info>
                 </mat-tab>
-                <mat-tab label="Web Hook">Content 2</mat-tab>
+                <mat-tab label="Web Hook">
+                    <app-app-web-hook></app-app-web-hook>
+                </mat-tab>
                 <mat-tab label="Permissions">Content 3</mat-tab>
                 <mat-tab label="Roles">Content 3</mat-tab>
                 <mat-tab label="Site Credentials">Content 3</mat-tab>
