--- a/src/app/views/apps/components/app-web-hook-form/app-web-hook-form.component.html
+++ b/src/app/views/apps/components/app-web-hook-form/app-web-hook-form.component.html
@@ -6,12 +6,12 @@
     <mat-form-field>
         <mat-label>Test WebHook URL</mat-label>
         <input matInput placeholder="e.g https://test.domain.com" formControlName="testUrl">
-        <!-- <mat-error></mat-error> -->
+        <mat-error></mat-error>
         <mat-hint>Required *</mat-hint>
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field controlErrorContainer>
         <mat-label>Live WebHook URL</mat-label>
-        <input matInput placeholder="e.g https://live.domain.com" formControlName="liveUrl">
+        <input matInput placeholder="e.g https://live.domain.com" formControlName="liveUrl" [customErrors]="customErrors">
         <mat-hint>Required *</mat-hint>
     </mat-form-field>
 
