save, update webhook

--- a/src/app/views/apps/components/app-configuration/app-configuration.component.html
+++ b/src/app/views/apps/components/app-configuration/app-configuration.component.html
@@ -26,7 +26,7 @@
                     <app-app-info [app]="app"></app-app-info>
                 </mat-tab>
                 <mat-tab label="Web Hook">
-                    <app-app-web-hook></app-app-web-hook>
+                    <app-app-web-hook [app]="app"></app-app-web-hook>
                 </mat-tab>
                 <mat-tab label="Permissions">Content 3</mat-tab>
                 <mat-tab label="Roles">Content 3</mat-tab>
