--- a/src/app/views/apps/components/app-web-hook-form/app-web-hook-form.component.html
+++ b/src/app/views/apps/components/app-web-hook-form/app-web-hook-form.component.html
@@ -1,19 +1,24 @@
-<form fxLayout="column wrap" fxLayoutGap="20px" fxFlex="50%" [formGroup]="doForm" (ngSubmit)="onSaveClick()">
+<form fxLayout="column wrap" fxLayoutGap="20px" fxFlex.gt-md="50%" [formGroup]="doForm" (ngSubmit)="onSaveClick()">
     <div>
         <label>WebHook Notification URLs</label>
         <mat-divider></mat-divider>
     </div>
-    <mat-form-field>
-        <mat-label>Test WebHook URL</mat-label>
-        <input matInput placeholder="e.g https://test.domain.com" formControlName="testUrl">
-        <mat-error></mat-error>
-        <mat-hint>Required *</mat-hint>
-    </mat-form-field>
-    <mat-form-field controlErrorContainer>
-        <mat-label>Live WebHook URL</mat-label>
-        <input matInput placeholder="e.g https://live.domain.com" formControlName="liveUrl" [customErrors]="customErrors">
-        <mat-hint>Required *</mat-hint>
-    </mat-form-field>
+    <div fxLayout="row wrap">
+        <mat-form-field controlErrorContainer fxFlex="100">
+            <mat-label>Test WebHook URL</mat-label>
+            <input matInput placeholder="e.g https://test.domain.com" formControlName="testUrl"
+            [customErrors]="customErrors">
+        </mat-form-field>
+    </div>
+
+    <div fxLayout="row wrap">
+        <mat-form-field controlErrorContainer fxFlex="100">
+            <mat-label>Live WebHook URL</mat-label>
+            <input matInput placeholder="e.g https://live.domain.com" formControlName="liveUrl"
+                [customErrors]="customErrors">
+        </mat-form-field>
+    </div>
+
 
     <div>
         <label>Events (sample payload is also shown)</label>
@@ -35,6 +40,6 @@
 
     <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="end center">
         <button mat-raised-button color="warn" type="reset"> Cancel</button>
-        <button mat-raised-button color="primary" type="submit"> Save</button>
+        <button mat-raised-button color="primary" [disabled]="disabled" type="submit"> {{submitText}}</button>
     </div>
 </form>
