--- a/src/app/views/apps/components/app-configuration/app-configuration.component.html
+++ b/src/app/views/apps/components/app-configuration/app-configuration.component.html
@@ -28,8 +28,12 @@
                 <mat-tab label="Web Hook">
                     <app-app-web-hook [app]="app"></app-app-web-hook>
                 </mat-tab>
-                <mat-tab label="Permissions">Content 3</mat-tab>
-                <mat-tab label="Roles">Content 3</mat-tab>
+                <mat-tab label="Roles">
+                    <app-app-role [app]="app"></app-app-role>
+                </mat-tab>
+                <mat-tab label="Permissions">
+                    <app-app-permission></app-app-permission>
+                </mat-tab>
                 <mat-tab label="Site Credentials">Content 3</mat-tab>
             </mat-tab-group>
         </div>
