--- a/src/app/views/apps/components/app-configuration/app-configuration.component.html
+++ b/src/app/views/apps/components/app-configuration/app-configuration.component.html
@@ -29,10 +29,13 @@
                     <app-app-web-hook [app]="app"></app-app-web-hook>
                 </mat-tab>
                 <mat-tab label="Roles">
-                    <app-app-role [app]="app"></app-app-role>
+                    <app-app-role [app]="app" (onDataChange)="handleDataChange($event)"></app-app-role>
                 </mat-tab>
-                <mat-tab label="Permissions">
-                    <app-app-permission></app-app-permission>
+                <mat-tab label="Permission Master List">
+                    <app-app-permission-master-list [app]="app" (onDataChange)="handleDataChange($event)"></app-app-permission-master-list>
+                </mat-tab>
+                <mat-tab label="Role Permissions">
+                    <app-app-permission [app]="app"></app-app-permission>
                 </mat-tab>
                 <mat-tab label="Site Credentials">Content 3</mat-tab>
             </mat-tab-group>
