--- a/src/app/views/apps/components/app-permission-form/app-permission-form.component.html
+++ b/src/app/views/apps/components/app-permission-form/app-permission-form.component.html
@@ -1,39 +1,58 @@
-<form fxLayout="column wrap" fxLayoutGap="20px" fxFlex.gt-md="50%" [formGroup]="doForm" (ngSubmit)="onSaveClick()">
+<div fxLayout="column wrap" fxLayoutGap="20px" fxFlex.gt-md="50%">
     <div>
-        <label>Specify your App Permissions Here. Use Underscores between words. E.g BILL_CREATOR</label>
-        <mat-divider></mat-divider>
-    </div>
-    <div fxLayout="row wrap">
-        <mat-form-field controlErrorContainer fxFlex="100">
-            <mat-label>Permission Name</mat-label>
-            <input matInput placeholder="e.g MANAGER" formControlName="name" [customErrors]="customErrors">
-        </mat-form-field>
-    </div>
-
-    <div fxLayout="row wrap" fxLayoutAlign="end stretch">
-        <button mat-raised-button color="primary" type="submit">Add</button>
-    </div>
-
-    <div>
-        <label>All Permissions for app</label>
-        <mat-divider></mat-divider>
-    </div>
-
-    <!-- <mat-selection-list #eventsMatList formArrayName="events">
-        <mat-list-option *ngFor="let event of allEvents" [selected]="event.selected" [value]="event.type">
-            <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="30px">
-                <div fxFlex="calc(30% - 30px)">{{event.type | underscoreToSpace| titlecase}}</div>
-                <div fxFlex="calc(40% - 30px)">
-                    <ngx-json-viewer [json]="event.payload" style="font-size: smaller;" [expanded]="false">
-                    </ngx-json-viewer>
-                </div>
+        <form fxLayout="column wrap" [formGroup]="doForm" fxLayoutGap="20px" (ngSubmit)="onSaveClick()">
+            <div>
+                <label>Specify your App Permissions Here. Use Underscores between words. E.g CREATE_USER,
+                    EDIT_USER</label>
+                <mat-divider></mat-divider>
             </div>
-            <mat-divider></mat-divider>
-        </mat-list-option>
-    </mat-selection-list> -->
 
-    <!-- <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="end center">
-        <button mat-raised-button color="warn" type="reset"> Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="disabled" type="submit"> {{submitText}}</button>
-    </div> -->
-</form>
+            <div fxLayout="row wrap">
+                <mat-form-field fxFlex="100" controlErrorContainer>
+                    <mat-select formControlName="role" placeholder="Role">
+                        <mat-option *ngFor="let item of app.roles" [value]="item.name">
+                            {{item.name}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div fxLayout="row wrap">
+                <mat-form-field fxFlex="100" controlErrorContainer>
+                    <mat-select formControlName="role" placeholder="Permission" formControlName="name">
+                        <mat-option *ngFor="let item of app.appPermissions" [value]="item.name">
+                            {{item.name}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div fxLayout="row wrap" fxLayoutAlign="end stretch">
+                <button mat-raised-button color="primary" type="submit">
+                    <mat-icon>add</mat-icon> Add
+                </button>
+            </div>
+
+        </form>
+    </div>
+
+
+    <div>
+        <div fxLayout="column wrap" fxLayoutGap="20px">
+            <div>
+                <label>Permissions</label>
+                <mat-divider></mat-divider>
+            </div>
+
+            <div *ngFor="let option of getPermissions()">
+                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+                    <div fxFlex="calc(80% - 20px)">{{option.name}}</div>
+                    <div fxFlex="calc(20% - 20px)">
+                        <button mat-icon-button color="warn" aria-label="Delete" (click)="onDeleteClick(option)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </div>
+                </div>
+                <mat-divider></mat-divider>
+            </div>
+        </div>
+    </div>
+</div>
