--- a/src/app/views/accounts/components/accounts-list/accounts-list.component.html
+++ b/src/app/views/accounts/components/accounts-list/accounts-list.component.html
@@ -8,13 +8,21 @@
         </div>
 
         <span fxFlex="1 1 auto"></span>
-        <button mat-raised-button color="primary" [routerLink]="['new']">
+        <!-- <button mat-raised-button color="primary" [routerLink]="['new']">
           <mat-icon class="mat-18">add</mat-icon>
           Add Account
-        </button>
+        </button> -->
       </div>
       <mat-divider></mat-divider>
     </div>
+    <div class="plr-30">
+      <div fxLayout="row wrap">
+        <div fxFlex="50%">
+          <app-app-autocomplete-chip (valueChanged)="appsFilterChanged($event)"></app-app-autocomplete-chip>
+        </div>
+      </div>
+    </div>
+
 
     <div fxFlex="calc(80%-30px)">
       <div>
@@ -34,7 +42,8 @@
                   <mat-icon [ngStyle]="{'color': 'green'}" class="mat-8">check_circle</mat-icon>
                   <span>{{row.status | titlecase}}</span>
                 </div>
-                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px" *ngIf="row.status === 'INACTIVE'">
+                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px"
+                  *ngIf="row.status === 'INACTIVE'">
                   <mat-icon color="warning" class="mat-8">warning</mat-icon>
                   <span>{{row.status | titlecase}}</span>
                 </div>
@@ -78,30 +87,31 @@
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-                  
-                </th>
-                <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                        <mat-icon>more_vert</mat-icon>
-                      </button>
-                      <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
-                          <mat-icon >power_off</mat-icon>
-                          <span>Deactivate</span>
-                        </button>
-                      </mat-menu>
-                      
-                </td>
-              </ng-container>
-  
+              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+
+              </th>
+              <td mat-cell *matCellDef="let row">
+                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item>
+                    <mat-icon>power_off</mat-icon>
+                    <span>Deactivate</span>
+                  </button>
+                </mat-menu>
+
+              </td>
+            </ng-container>
+
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
         </div>
 
-        <mat-paginator [length]="dataSource.totalElements" [hidePageSize]="true" [pageSize]="30" [pageSizeOptions]="[30, 50, 100]"></mat-paginator>
+        <mat-paginator [length]="dataSource.totalElements" [hidePageSize]="true" [pageSize]="30"
+          [pageSizeOptions]="[30, 50, 100]"></mat-paginator>
       </div>
     </div>
   </div>
