--- a/src/app/views/apps/components/app-configuration/app-configuration.component.html
+++ b/src/app/views/apps/components/app-configuration/app-configuration.component.html
@@ -37,7 +37,7 @@
                 <mat-tab label="Role Permissions">
                     <app-app-permission [app]="app"></app-app-permission>
                 </mat-tab>
-                <mat-tab label="Site Credentials">Content 3</mat-tab>
+                <!-- <mat-tab label="Site Credentials">Content 3</mat-tab> -->
             </mat-tab-group>
         </div>
     </div>
